01_Dev/최종 코드/rokey_ws/log/build_2026-04-16_18-03-08/day3/stderr.log
  File "/home/rokey/rokey_ws/install/day3/lib/python3.10/site-packages/day3/3_1_c_follow_waypoints.py", line 50
    goal_pose.append(navigator.getPoseStamped([-1.5589 1.7090], TurtleBot4Directions.EAST))
                                               ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

